@@ -3,24 +3,14 @@ Hash: SHA256
 
 AUX lz4-0_p106-install-to-bindir.patch 2141 SHA256 3799ef8a56f5cbeecd5f6ceb8716454990087965136322ccd99c6911e60dc924 SHA512 853be770173b46188c4f293f13c263053fd3837c23e959b2d19e36c5d3c8c04798b619224fe02b20f414494baf4db4235b7c223ce665b9b90f14a655c8303f8c WHIRLPOOL 6aac55ec15e8b82a16b06faa50bcb362ace5100bab3788d81ed3618f6efae787664855db14bd0f5393624647d13df40214f873ee7da24d505f9aa4fb371bcdf5
 DIST lz4-0_p106.tar.xz 129352 SHA256 a9a09c4ebb962995d10e7e4f7d9224aaa93f308899de18a414948a58e87b6f22 SHA512 8b2bafbf78be7c42831e264d7acdca12712c88369cecdb3aa4621c84bb6b450c372f5153f7c3939a5f70d5810c62b98993697397319d286a1bb51b1e4a6ecde6 WHIRLPOOL fc5bb47b73606b125d8e155365d1fe101083e68e684ffd6014440e0f1416f1f6ecc64b797083e6939bd3e8cd42018e46a1864ae4542160c96933a47df9421a42
-EBUILD lz4-0_p106-r1.ebuild 1239 SHA256 496b53f304901209a6e676e43175bb5d845186b62308f9c95bcaff1042fd7872 SHA512 18a8beed528007a516d12cf7556cb25e2598f32d1c659acc08e055763d1306af5732600c956eb1399e904c9e71b7a18ccca1d1cf6948bbd505e2c21663f72ec1 WHIRLPOOL c3dad5dcf3a81d2912520a217c854200f9e76f17c68e6a0dbb174e87abe1cd794381fe04f956b9d4bf78e6025052d436f19258b927ced880272935ded0d2bd31
+EBUILD lz4-0_p106-r1.ebuild 1272 SHA256 b794304510a324e0903ffe3ca763dd834b19004a8e4241fefdf295e1015ecbd0 SHA512 b90673951fde73a199d3c9fbd438285ae7d011552d1740a87c1f75dc38e1967ce8b94fd1c4722d62953476cbb493f6a8204875edd3268be760fa3d8c3f72f31c WHIRLPOOL c20e0e53de1db66ea32144d7fd51ffef80e830e0450f89d1460ec726cbebda35939fd302e92f04829ccb939e5053084e465e448e684f526b35fb129628b88ce7
 EBUILD lz4-9999.ebuild 1234 SHA256 485148f4c8bf3c23492398cd73cbfc1837c5199b33b90161521a9bf8fabddd43 SHA512 6aa4a354a6ca7fad93384dd66eda4126ad6351f01273bb215dd0de90ca6c711a0d4c9905116d1c31ff491f46d5261f0a77b9c4c4bacf71e0e27adfc32b18a714 WHIRLPOOL 970078089485e96d8967a2a9087cd287bc4e0895c5e2d46fcd258fae6e9e8e3b2b89e05d6eb78ce65148f35f299a2d278e604227480314724601c19312d9890b
-MISC ChangeLog 1665 SHA256 41da65d532eab26a7d0aa823110d403436c6272d2015c400d9306ec9822e2b0e SHA512 31609c831f51d99fe45e31ea9a89d6ec48e103d9a758516cc16bd8062c685a208d5f601df363b3f1e0295f71ae43bfd93bf46fe2c06b339c20e792f200416703 WHIRLPOOL 31bd8a2171d41bb7d2ef1b76177c6566a115937f375496aa7a4b18101822f58b3a06dc6e2b58542e7793272e94102cba162e26168135776facc656d2b16ca83d
+MISC ChangeLog 1788 SHA256 59c3d9c669cd613b53c9d8345b94b70020a6461e68bcaf2cb618f2c1a8446260 SHA512 d374fb93cb119b24c71bc878782ebc943147ccbde6adb613335d82c5209dbd28d51c690da86cb748a3c733ed4255ebc84941d4f285d3d90389decde983005cdd WHIRLPOOL 7b91c3653d273c9cb40004f8207078ea8bae3efab2d66370f1352e819cd9dc7572cca0a4bfab13f3800ef68edde1e12bf6df31867fb2fb7eeafa9def5f1f5bcb
 MISC metadata.xml 228 SHA256 a317cd066ed83c5b5acf9d49869cb2f153499bb90cee389334bee9781534f5e8 SHA512 1638d4580908d32ad6fad71d109a58d699c9111d26c1073ae95b20248fc2a5da91a1f73153f01942df25c64865586e970e6532a312cd374d9866bf21264ddc54 WHIRLPOOL 11e5655c66af420e31f60d3ab19ef3ff55222271dd63bca94b548c7a63bbc73e8edfb4d80648d143c7d8315f8ba66bc4140dcf97ff85ea472e2a7cab1de98264
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSWo5LAAoJECDuEZm+6ExkRKQP/0UmewEx6M0FLwKuVfbX252O
-kqAEb2RkbP5oydGaoNtpjJ0BjwTZU7qFDZfyl6j3IYetOlUc2RCHBQNz4Gb3AgWP
-00nxdRi+s6cilkxfnv1xAhn/IQrhZdMntG8FyHxv+ZZf/h5C54j3i3H8PKy0kU9J
-KssUF8M8rfRVVK30Ci0KZObQCvpt+ArRnPMNtUBA+ts/qyIayQLf75WYaT/RHwwj
-ELRTAdnWWQO0wf9e932R+iWObFGH1RENXu4Aiq/smDhchNlufpeWnHQ88XPctkjB
-6ZFXh2+S8BPHzHOLpezMbePSrKS8iDabPLZqyUYFzMfiwEwse8bBKiy7ygqr8zhC
-Lu4GS4K+hoBGPvR2kg7JFQGXcRJT1vMBI2shlQVUEhdjWqffX/3b63wL1tyrB9v9
-7VYXo3XEiODbwUPYyl5Ea18973xsMn5hNZGOyMhb63llTNWsi3VEqLt93fb+LNO7
-fxNnlKF9CcWBrej3A++GuXLyJ8dgsZWcsJoDobCuUMq9Ifs/tpaz0WR/3ORbhAlq
-wMhgXfEosF4OykkV6ly2MJhkcV6PDyEscqlVk/u57R/drwH3fTarXN5d+V+syBW7
-8aWjr5oqpSNS/Svq3ObD/4oP7u+HQb7wTHR+q7Cxn5Ly9FipRPIsxrnMZmNQtQoJ
-h2uRMCBWG/vOoXKpIym4
-=Fndf
+iEYEAREIAAYFAlLy1swACgkQ1ycZbhPLE2BHeACbBJNRji5Y6vehcgcjacZ+E4FF
+AOUAn21Asj9afEJf5YDA+Z3pxaJ5ny6I
+=MiTA
 -----END PGP SIGNATURE-----
