@@ -3,9 +3,9 @@ DEPEND=sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutil
 DESCRIPTION=Extremely Fast Compression algorithm
 EAPI=5
 HOMEPAGE=https://code.google.com/p/lz4/
-KEYWORDS=~amd64
+KEYWORDS=~amd64 ~x86 ~amd64-linux ~x86-linux
 LICENSE=BSD-2
 SLOT=0
 SRC_URI=http://dev.gentoo.org/~ryao/dist/lz4-0_p106.tar.xz
 _eclasses_=cmake-utils	fd482b43d509957b7fde7aa2213b1197	eutils	40081e8c7e7f7c4f9db349a1d6d52925	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=b4daaf8a83eb6f0f88a89ec8fc2f730b
+_md5_=6fd33079599db24fcf74d0a5aa1e6de4
