@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libgpg-error
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.101 2014/01/18 05:05:38 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgpg-error/ChangeLog,v 1.102 2014/02/06 00:22:51 radhermit Exp $
+
+*libgpg-error-1.12-r1 (06 Feb 2014)
+
+  06 Feb 2014; Tim Harder <radhermit@gentoo.org> +libgpg-error-1.12-r1.ebuild:
+  Add multilib support (bug #480396 by David Heidelberger).
 
   18 Jan 2014; Mike Frysinger <vapier@gentoo.org> libgpg-error-1.12.ebuild:
   Add arm64 love.
